syntax = "proto3";

package Client_TransactionManagerProto;

message DADInt {
	string key = 1;
	int32 value = 2;
}

message TransactionRequest {
	string id = 1;
	repeated string reads = 2;
	repeated DADInt writes = 3;
}

message TransactionResponse {
	repeated DADInt response = 1;
}

message StatusRequest { }

message StatusResponse {
	bool status = 1;
}

service Client_TransactionManagerService {
	rpc TxSubmit(TransactionRequest) returns (TransactionResponse);
	rpc Status(StatusRequest) returns (StatusResponse);
}